--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-pandas
-numpy
-scipy
-scikit-learn
-matplotlib
-tensorflow
-aiohttp
-statsmodels
-PyYAML
-seaborn
-fastcluster
-python_version=='3.6.6'
+pandas==1.1.5
+numpy==1.19.5
+scipy==1.5.4
+scikit-learn==0.24.2
+matplotlib==3.3.4
+tensorflow==1.15.0
+aiohttp==3.7.4.post0
+statsmodels==0.12.2
+PyYAML==5.4.1
+seaborn==0.11.2
+fastcluster==1.2.6
