--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ fastcluster==1.2.6
 yfinance==0.2.48
 openai>=1.0.0,<2.0.0
 python-telegram-bot>=13.0,<21.0
+streamlit>=1.39.0
 pytest>=7.0.0
 torch>=1.13.0
